[package]
name = "totp-lite"
version = "3.0.1"
authors = ["Cleo Rebert <cleo.rebert@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "RFC-compliant TOTP implementation with ease of use as a goal and additionnal QoL features."
repository = "https://github.com/constantoine/totp-rs"
homepage = "https://github.com/constantoine/totp-rs"
keywords = ["authentication", "2fa", "totp", "hmac", "otp"]
categories = ["authentication", "web-programming"]

[package.metadata.docs.rs]
features = [ "qr", "serde_support", "otpauth" ]

[features]
default = ["gen_secret"]
otpauth = ["url", "urlencoding"]
serde = ["dep:serde"]
gen_secret = ["rand"]
zeroize = ["dep:zeroize"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "~0.10.2"
sha1 = "~0.10.5"
hmac = "~0.12.1"
base32 = "~0.4"
urlencoding = { version = "^2.1.0", optional = true}
url = { version = "^2.2.2", optional = true }
constant_time_eq = "~0.2.1"
rand = { version = "~0.8.5", features = ["std_rng", "std"], optional = true, default-features = false }
zeroize = { version = "1.5.7", features = ["alloc", "derive"], optional = true }