[package]
name = "totp-lite"
version = "3.1.0"
authors = ["Muji <muji@tmpfs.org>", "Cleo Rebert <cleo.rebert@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "RFC-compliant TOTP implementation with minimal dependencies."
repository = "https://github.com/tmpfs/totp-lite"
homepage = "https://github.com/tmpfs/totp-lite"
keywords = ["authentication", "2fa", "totp", "hmac", "otp"]
categories = ["authentication", "web-programming"]

[package.metadata.docs.rs]
features = [ "serde", "zeroize" ]

[features]
default = ["zeroize"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10.2"
sha1 = "0.10.5"
hmac = "0.12.1"
base32 = "0.4"
urlencoding = { version = "2.1.0"}
url = { version = "2.2.2" }
constant_time_eq = "0.2.1"
zeroize = { version = "1.5.7", features = ["alloc", "derive"], optional = true }